bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:3: error: not found: value ||
  if (temp1 <= 0 && temp2 >= 0) || (temp2 <= 0 && temp1 >= 0) {
                                ^